--- a/docs/Selenium/实战踩坑.md
+++ b/docs/Selenium/实战踩坑.md
@@ -8,7 +8,7 @@ parent: Selenium
 
 ## 1.1 障眼法
 
-我们在F12控制台输入 
+我们在F12控制台输入 `window.navigator.webdriver` 时，结果有3种：
 
 1. true
 
@@ -20,45 +20,45 @@ parent: Selenium
 
 Q1：那么如何避免被发现呢？
 
-A1：当然是把 
+A1：当然是把 `window.navigator.webdriver` 改为false或者undefined啦。
 
-Q2：如何修改 
+Q2：如何修改 `window.navigator.webdriver` ？
 
 A2：对于不同的浏览器有不同的处理方法
 
-1. 如果是Firefox浏览器，初始化配置项 
+1. 如果是Firefox浏览器，初始化配置项 `dom.webdriver.enabled`
 
 ```java
 FirefoxOptions firefoxOptions = new FirefoxOptions();
 firefoxOptions.addPreference("dom.webdriver.enabled", false);
 ```
 
-1. 如果是Chrome浏览器
+2. 如果是Chrome浏览器
 
-1. 初始化配置项（推荐）
+    2.1. 初始化配置项（推荐）
 
-```java
-ChromeOptions chromeOptions = new ChromeOptions();
-// 79以前版本
-chromeOptions.setExperimentalOption("excludeSwitches", Lists.newArrayList("enable-automation"));
-chromeOptions.setExperimentalOption("useAutomationExtension", false);
-// 79以后版本
-chromeOptions.addArguments("--disable-blink-features");
-chromeOptions.addArguments("--disable-blink-features=AutomationControlled");
-```
+    ```java
+    ChromeOptions chromeOptions = new ChromeOptions();
+    // 79以前版本
+    chromeOptions.setExperimentalOption("excludeSwitches", Lists.newArrayList("enable-automation"));
+    chromeOptions.setExperimentalOption("useAutomationExtension", false);
+    // 79以后版本
+    chromeOptions.addArguments("--disable-blink-features");
+    chromeOptions.addArguments("--disable-blink-features=AutomationControlled");
+    ```
 
-1. 手动执行CDP命令（不推荐）
+    2.2. 手动执行CDP命令（不推荐）
 
-何为CDP？CDP（Chrome DevTools Protocol），Selenium4.0.0版本开始支持。
+    何为CDP？CDP（Chrome DevTools Protocol），Selenium4.0.0版本开始支持。
 
-CDP文档：[https://chromedevtools.github.io/devtools-protocol/tot/Page#method-addScriptToEvaluateOnNewDocument](https://chromedevtools.github.io/devtools-protocol/tot/Page#method-addScriptToEvaluateOnNewDocument)
+    CDP文档：[https://chromedevtools.github.io/devtools-protocol/tot/Page#method-addScriptToEvaluateOnNewDocument](https://chromedevtools.github.io/devtools-protocol/tot/Page#method-addScriptToEvaluateOnNewDocument)
 
-```java
-ChromeDriver chromeDriver = new ChromeDriver(chromeDriverService, chromeOptions);chromeDriver.executeCdpCommand("Page.addScriptToEvaluateOnNewDocument",ImmutableMap.of("source","Object.defineProperty(navigator,'webdriver',{get:()=>undefined})"));
-chromeDriver.get("");
-```
+    ```java
+    ChromeDriver chromeDriver = new ChromeDriver(chromeDriverService, chromeOptions);chromeDriver.executeCdpCommand("Page.addScriptToEvaluateOnNewDocument",ImmutableMap.of("source","Object.defineProperty(navigator,'webdriver',{get:()=>undefined})"));
+    chromeDriver.get("");
+    ```
 
-致命缺点：当页面跳转或刷新时，修改会失效。
+    致命缺点：当页面跳转或刷新时，修改会失效。
 
 ## 1.2 别吊死在一棵树上
 
