--- a/docs/Doris/Doris Guides 3.0/数据表设计.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计.md
@@ -259,69 +259,59 @@ table_properties;
 2. 必须使用 `USING INVERTED` 来指定索引类型为倒排索引 
 3. `PROPERTIES` 是可选项，用于指定倒排索引的其他属性，目前支持的属性有：
 
-<details>
-    <summary>parser</summary>
-    <p>- 默认为未指定，即不进行分词</p> 
-    <p>- `english`： 英文分词，适用于包含英文文本的栏目，使用空格和标点符号进行分词，性能高</p> 
-    <p>- `chinese`： 中文分词，适用于主要包含中文文本的栏目，性能低于英文分词</p>
-    <p>- `unicode`： Unicode 分词，适用于中英文混合和多语言混合文本。 它可以分词电子邮件前缀和后缀、IP 地址以及字符和数字混合字符串，还可以按字符分词中文。 
-    <p>可使用 TOKENIZE SQL 函数验证分词结果，详见以下章节。</p>
-</details>
+    * parser
+        * 默认为未指定，即不进行分词 
+        * `english`： 英文分词，适用于包含英文文本的栏目，使用空格和标点符号进行分词，性能高 
+        * `chinese`： 中文分词，适用于主要包含中文文本的栏目，性能低于英文分词
+        * `unicode`： Unicode 分词，适用于中英文混合和多语言混合文本。 它可以分词电子邮件前缀和后缀、IP 地址以及字符和数字混合字符串，还可以按字符分词中文。 
+        
+        可使用 TOKENIZE SQL 函数验证分词结果，详见以下章节。
 
-<details>
-    <summary>parser_mode</summary>
-    <p>指定分词模式，`parser = chinese` 当前支持的模式有：</p> 
-    <p>- fine_grained：细粒度模式，倾向于生成更短、更多的单词，例如，"武汉市长江大桥 "将被分词为 "武汉'、'武汉市'、'市长'、'长江'、'长江大桥'、'大桥'"。</p> 
-    <p>- cross_grained：粗粒度模式，倾向于生成较长、较少的单词，例如，"武汉市长江大桥 "将被分词为 "武汉市"、"长江大桥"。</p>
-    <p>- 默认 cross_grained </p>
-</details>
+    * parser_mode
+        指定分词模式，`parser = chinese` 当前支持的模式有： 
+        * fine_grained：细粒度模式，倾向于生成更短、更多的单词，例如，"武汉市长江大桥 "将被分词为 "武汉'、'武汉市'、'市长'、'长江'、'长江大桥'、'大桥'"。 
+        * cross_grained：粗粒度模式，倾向于生成较长、较少的单词，例如，"武汉市长江大桥 "将被分词为 "武汉市"、"长江大桥"。
+        * 默认 cross_grained 
 
-<details>
-    <summary>support_phrase</summary>
-    <p>指定索引是否支持 MATCH_PHRASE 短语查询加速</p> 
-    <p>- true：支持，但索引需要更多存储空间 </p> 
-    <p>- false：不支持，存储效率更高，可使用 MATCH_ALL 查询多个关键词 </p>
-    <p>- 默认为 false</p>
-    <p>例如，下面的示例指定了中文分词、coarse-grained模式，并支持短语查询加速。</p>
-    <pre><code>
-INDEX idx_name(column_name) USING INVERTED PROPERTIES("parser" = "chinese", "parser_mode" = "coarse_grained", "support_phrase" = "true")
-    </code></pre>
-</details>
+    * support_phrase
+        指定索引是否支持 MATCH_PHRASE 短语查询加速 
+        * true：支持，但索引需要更多存储空间  
+        * false：不支持，存储效率更高，可使用 MATCH_ALL 查询多个关键词 
+        * 默认为 false
+        
+        例如，下面的示例指定了中文分词、coarse-grained模式，并支持短语查询加速。
+        ```sql
+        INDEX idx_name(column_name) USING INVERTED PROPERTIES("parser" = "chinese", "parser_mode" = "coarse_grained", "support_phrase" = "true")
+        ```
 
-<details>
-    <summary>char_filter</summary>
-    <p>指定在分词前对文本进行预处理，通常是为了影响分词行为</p> 
-    <p>char_filter_type：指定不同功能的 char_filter（目前仅支持 char_replace） </p> 
-    <p>char_replace 将模式中的每个字符替换为替换字符中的一个字符。</p>
-    <p>- char_filter_pattern：要替换的字符</p>
-    <p>- char_filter_replacement：替换字符数组，可选，默认为空格字符</p>
-    <p>例如，下面的示例将 `点` 和 `下划线` 替换为 `空格` ，从而将它们视为单词分隔符，影响标分词行为。</p>
-    <pre><code>
-INDEX idx_name(column_name) USING INVERTED PROPERTIES("parser" = "unicode", "char_filter_type" = "char_replace", "char_filter_pattern" = "._", "char_filter_replacement" = " ")
-    </code></pre>
-</details>
+    * char_filter
+        指定在分词前对文本进行预处理，通常是为了影响分词行为 
+        char_filter_type：指定不同功能的 char_filter（目前仅支持 char_replace）  
+        char_replace 将模式中的每个字符替换为替换字符中的一个字符。
+        * char_filter_pattern：要替换的字符
+        * char_filter_replacement：替换字符数组，可选，默认为空格字符
+        
+        例如，下面的示例将 `点` 和 `下划线` 替换为 `空格` ，从而将它们视为单词分隔符，影响标分词行为。
+        ```sql
+        INDEX idx_name(column_name) USING INVERTED PROPERTIES("parser" = "unicode", "char_filter_type" = "char_replace", "char_filter_pattern" = "._", "char_filter_replacement" = " ")
+        ```
 
-<details>
-    <summary>ignore_above</summary>
-    <p>指定非分词字符串索引的长度限制（未指定解析器）</p> 
-    <p>- 长度超过 ignore_above 设置的字符串将不会被索引。 对于字符串数组，ignore_above 分别适用于每个数组元素，长度超过 ignore_above 的元素将不被索引。</p> 
-    <p>- 默认为 256，单位为字节</p> 
-</details>
+    * ignore_above
+        指定非分词字符串索引的长度限制（未指定解析器） 
+        * 长度超过 ignore_above 设置的字符串将不会被索引。 对于字符串数组，ignore_above 分别适用于每个数组元素，长度超过 ignore_above 的元素将不被索引。 
+        * 默认为 256，单位为字节 
 
-<details>
-    <summary>lower_case</summary>
-    <p>是否将分词转换为小写，以便进行大小写不敏感匹配</p> 
-    <p>- true: 转换为小写</p> 
-    <p>- false：不转换为小写</p> 
-    <p>- 从 2.0.7 和 2.1.2 版开始，默认为 true，自动转换为小写。 早期版本的默认值为 false 。</p> 
-</details>
+    * lower_case
+        是否将分词转换为小写，以便进行大小写不敏感匹配 
+        * true: 转换为小写 
+        * false：不转换为小写 
+        
+        从 2.0.7 和 2.1.2 版开始，默认为 true，自动转换为小写。 早期版本的默认值为 false 。 
 
-<details>
-    <summary>stopwords</summary>
-    <p>指定要使用的停止词列表，这将影响分词符号生成器的行为</p> 
-    <p>- 默认的内置停用词列表包括 "is"、"the"、"a "等无意义的词。 在编写或查询时，分词符号生成器将忽略停用词列表中的单词。</p> 
-    <p>- none： 使用空停止词表</p> 
-</details>
+    * stopwords
+        指定要使用的停止词列表，这将影响分词符号生成器的行为 
+        * 默认的内置停用词列表包括 "is"、"the"、"a "等无意义的词。 在编写或查询时，分词符号生成器将忽略停用词列表中的单词。 
+        * none： 使用空停止词表 
 
 4. `COMMENT` 是可选项，用于指定索引注释
 
