--- a/docs/Doris/Doris Guides 3.0/数据表设计.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计.md
@@ -430,9 +430,21 @@ SELECT * FROM table_name WHERE op_type IN ('add', 'delete');
 `TOKENIZE` 函数的第一个参数是要分词的文本，第二个参数指定创建索引时使用的分词参数。
 
 ```cmd
-mysql> SELECT TOKENIZE('I love CHINA','"parser"="english"'); +------------------------------------------------+ | tokenize('I love CHINA', '"parser"="english"') | +------------------------------------------------+ | ["i", "love", "china"] | +------------------------------------------------+ 1 row in set (0.02 sec)
+mysql> SELECT TOKENIZE('I love CHINA','"parser"="english"'); 
++------------------------------------------------+ 
+| tokenize('I love CHINA', '"parser"="english"') | 
++------------------------------------------------+ 
+| ["i", "love", "china"]                         | 
++------------------------------------------------+ 
+1 row in set (0.02 sec)
 
-mysql> SELECT TOKENIZE('I love CHINA 我爱我的祖国','"parser"="unicode"'); +-------------------------------------------------------------------+ | tokenize('I love CHINA 我爱我的祖国', '"parser"="unicode"') | +-------------------------------------------------------------------+ | ["i", "love", "china", "我", "爱", "我", "的", "祖", "国"] | +-------------------------------------------------------------------+ 1 row in set (0.02 sec)
+mysql> SELECT TOKENIZE('I love CHINA 我爱我的祖国','"parser"="unicode"'); 
++-------------------------------------------------------------------+ 
+| tokenize('I love CHINA 我爱我的祖国', '"parser"="unicode"')        | 
++-------------------------------------------------------------------+ 
+| ["i", "love", "china", "我", "爱", "我", "的", "祖", "国"]         | 
++-------------------------------------------------------------------+ 
+1 row in set (0.02 sec)
 ```
 
 **使用示例**
