数据表设计

--- a/docs/Doris/Doris Guides 3.0/数据表设计.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计.md
@@ -776,4 +776,259 @@ mysql> SELECT count() FROM hackernews_1m;
     1 row in set (0.01 sec)
     ```
 
+## 3.4 BloomFilter索引
+### 3.4.1 索引原理
+BloomFilter索引是一种基于BloomFilter的跳数索引。其原理是使用BloomFilter跳过不符合指定条件的数据块进行相等性查询，从而减少IO，加速查询。
+
+BloomFilter是Bloom在1970年提出的一种快速查找算法，它使用多个哈希函数。它通常用于需要快速确定元素是否属于集合而不需要100%精度的场景。BloomFilter具有以下特点：
+* 一种空间效率高的概率数据结构，用于检查一个元素是否在集合中。
+* 对于成员检查，BloomFilter返回两种结果之一：可能在集合中，或者肯定不在集合中。
+
+BloomFilter由一个很长的二进制位数组和一系列哈希函数组成。位数组最初全部设置为0。当要检查一个元素时，它被一系列哈希函数散列以生成一系列值，并且数组中这些位置的位被设置为1。
+
+下图显示了一个m=18, k=3的BloomFilter示例（其中m是位数组的大小，k是哈希函数的数量）。集合中的元素x、y和z被3个不同的哈希函数散列到位数组中。在查询元素w时，如果哈希函数计算出的任何位为0，则w不在集合中。相反，如果所有的位都是1，它只表明w可能在集合中，但不确定，因为可能存在哈希冲突。
+
+![](../../../assets/images/Doris/attachments/Bloom_filter.svg-e437ea5c65c96143c00cdb97711e1b10.png)
+
+因此，如果计算位置上的所有位都为1，则仅表示该元素可能在集合中，而不是一定在集合中，因为可能存在哈希冲突。这就是BloomFilter的 "false positive" 本质。因此，基于bloomfilter的索引只能跳过不满足条件的数据，而不能精确定位满足条件的数据。
+
+Doris BloomFilter索引建立在每页的基础上，每个数据块存储一个BloomFilter。在写入过程中，数据块中的每个值被散列到相应的BloomFilter中。在查询相等条件时，将检查每个数据块的BloomFilter是否包含该值。如果不是，则跳过数据块，减少IO并加快查询速度。
+
+### 3.4.2 使用场景
+BloomFilter索引可以加速相等性查询（包括 `=` 和 `IN` ），并且对高基数字段有效，例如像userid这样的唯一id字段。
+
+> BloomFilter有以下限制：
+> 1. 它对 `in` 和 `=` 以外的查询没有影响，例如 `！=、NOT in、>、<` 等。
+> 2. 它不支持对 `Tinyint、Float、Double` 类型的列进行BloomFilter索引。
+> 3. 它对低基数域的加速效果有限。例如，只有两个值的 "gender" 字段可能会包含在几乎每个数据块中，这使得BloomFilter索引毫无意义。
+> 
+> 要检查BloomFilter索引对查询的影响，您可以分析查询配置文件中的相关指标。
+> * BlockConditionsFilteredBloomFilterTime是BloomFilter索引消耗的时间。
+> * RowsBloomFilterFiltered是BloomFilter过滤掉的行数。您可以将它与其他Rows值进行比较，以分析BloomFilter索引的过滤效果。
+
+### 3.4.3 语法
+#### 3.4.3.1 创建表时创建BloomFilter索引
+由于历史原因，定义BloomFilter索引的语法不同于用于倒排索引的一般INDEX语法。使用“bloom_filter_columns”在表的PROPERTIES中指定BloomFilter索引，它可以指定一个或多个字段。
+
+```
+PROPERTIES (
+"bloom_filter_columns" = "column_name1,column_name2"
+);
+```
+
+#### 3.4.3.2 查看BloomFilter索引
+```sql
+SHOW CREATE TABLE table_name;
+```
+
+#### 3.4.3.3 在现有表上添加或删除BloomFilter索引
+通过ALTER table修改表的bloom_filter_columns属性来添加或删除BloomFilter索引。
+
+**为column_name3添加BloomFilter索引**
+```sql
+ALTER TABLE table_name SET ("bloom_filter_columns" = "column_name1,column_name2,column_name3");
+```
+
+**删除column_name1的BloomFilter索引**
+```sql
+ALTER TABLE table_name SET ("bloom_filter_columns" = "column_name2,column_name3");
+```
+
+### 3.4.4 使用示例
+下面是一个如何在Doris中创建BloomFilter索引的示例。
+
+#### 3.4.4.1 创建BloomFilter索引
+Doris中的BloomFilter索引是通过在CREATE TABLE语句中添加“bloom_filter_columns”属性来创建的，其中k1、k2、k3是BloomFilter索引的关键列。例如，下面的代码在saler_id和category_id上创建BloomFilter索引。
+
+```sql
+CREATE TABLE IF NOT EXISTS sale_detail_bloom  (
+    sale_date date NOT NULL COMMENT "Sale date",
+    customer_id int NOT NULL COMMENT "Customer ID",
+    saler_id int NOT NULL COMMENT "Salesperson",
+    sku_id int NOT NULL COMMENT "Product ID",
+    category_id int NOT NULL COMMENT "Product category",
+    sale_count int NOT NULL COMMENT "Sales quantity",
+    sale_price DECIMAL(12,2) NOT NULL COMMENT "Unit price",
+    sale_amt DECIMAL(20,2)  COMMENT "Total sales amount"
+)
+DUPLICATE KEY(sale_date, customer_id, saler_id, sku_id, category_id)
+DISTRIBUTED BY HASH(saler_id) BUCKETS 10
+PROPERTIES (
+"replication_num" = "1",
+"bloom_filter_columns"="saler_id,category_id"
+);
+```
+
+## 3.5 N-Gram BloomFilter索引
+### 3.5.1 索引原理
+NGram BloomFilter索引与BloomFilter索引类似，是基于BloomFilter的跳数索引。
+
+与BloomFilter索引不同，NGram BloomFilter索引用于加速文本LIKE查询。它没有存储原始文本值，而是使用NGram对文本进行分词，并将每个分词存储在BloomFilter中。对于LIKE查询，LIKE ‘%pattern%’中的模式也使用NGram进行分词。每个词根都根据BloomFilter进行检查，如果没有找到任何词根，则对应的数据块不符合LIKE条件，可以跳过，从而减少IO并加速查询。
+
+### 3.5.2 使用场景
+NGram BloomFilter索引只能加速字符串LIKE查询，并且LIKE模式中连续出现的字符数必须大于等于NGram索引中定义的N。
+
+> * NGram BloomFilter只支持字符串列，只能加速LIKE查询。
+> * NGram BloomFilter索引和BloomFilter索引是互斥的，这意味着一个列只能有其中一个。
+> * NGram BloomFilter指数的性能分析与BloomFilter指数的性能分析类似。
+
+### 3.5.3 语法
+#### 3.5.3.1 创建一个NGram BloomFilter索引
+索引定义遵循CREATE TABLE语句中的COLUMN定义
+```sql
+INDEX `idx_column_name` (`column_name`) USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024") COMMENT 'username ngram_bf index'
+```
+
+语法解释：
+1. `idx_column_name （column_name）` 为必选参数。`column_name` 是要索引的列，必须出现在上面的列定义中。`idx_column_name` 是索引名，在表级别上必须是唯一的。建议使用 `idx_` 前缀和列名来命名它。
+2. `USING NGRAM_BF` 是必选项，指定索引类型为NGram BloomFilter索引。
+3. `PROPERTIES` 是可选的，用于为NGram BloomFilter索引指定附加属性。支持的属性有：
+    1. gram_size: NGram中的N，指定形成标记的连续字符的数量。例如，N = 3的‘an ngram示例’将被标记为‘an ’， ‘ n n ’， ‘ng ’， ‘ngr’， ‘gra’， ‘ram’（6个标记）。
+    2. bf_size: BloomFilter的大小。bf_size决定每个数据块对应的索引大小。这个值越大，它占用的存储空间就越多，但是哈希冲突的概率就越低。
+
+    在LIKE查询中，建议将gram_size设置为字符串的最小长度，但不小于2。一般建议设置为“gram_size”=“3”，“bf_size”=“1024”，然后根据Query Profile进行调整。
+4. `COMMENT` 是可选的，指定索引注释。
+
+#### 3.5.3.2 查看NGram BloomFilter索引
+```sql
+SHOW CREATE TABLE table_ngrambf;
+```
+
+#### 3.5.3.3 删除NGram BloomFilter索引
+```sql
+ALTER TABLE table_ngrambf DROP INDEX idx_ngrambf;
+```
+
+#### 3.5.3.4 修改NGram BloomFilter索引
+```sql
+CREATE INDEX idx_column_name2(column_name2) ON table_ngrambf USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024") COMMENT 'username ngram_bf index';
+
+ALTER TABLE table_ngrambf ADD INDEX idx_column_name2(column_name2) USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024") COMMENT 'username ngram_bf index';
+```
+
+### 3.5.4 使用示例
+本节使用Amazon产品评论数据集 `amazon_reviews` 演示了NGram BloomFilter索引的用法和有效性。
+
+#### 3.5.4.1 表创建
+```sql
+CREATE TABLE `amazon_reviews` (  
+  `review_date` int(11) NULL,  
+  `marketplace` varchar(20) NULL,  
+  `customer_id` bigint(20) NULL,  
+  `review_id` varchar(40) NULL,
+  `product_id` varchar(10) NULL,
+  `product_parent` bigint(20) NULL,
+  `product_title` varchar(500) NULL,
+  `product_category` varchar(50) NULL,
+  `star_rating` smallint(6) NULL,
+  `helpful_votes` int(11) NULL,
+  `total_votes` int(11) NULL,
+  `vine` boolean NULL,
+  `verified_purchase` boolean NULL,
+  `review_headline` varchar(500) NULL,
+  `review_body` string NULL
+) ENGINE=OLAP
+DUPLICATE KEY(`review_date`)
+COMMENT 'OLAP'
+DISTRIBUTED BY HASH(`review_date`) BUCKETS 16
+PROPERTIES (
+  "replication_allocation" = "tag.location.default: 1",
+  "compression" = "ZSTD"
+);
+```
+
+#### 3.5.4.2 数据导入
+使用wget或其他工具从以下网址下载数据集：
+
+```cmd
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2010.snappy.parquet
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2011.snappy.parquet
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2012.snappy.parquet
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2013.snappy.parquet
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2014.snappy.parquet
+https://datasets-documentation.s3.eu-west-3.amazonaws.com/amazon_reviews/amazon_reviews_2015.snappy.parquet
+```
+
+使用流加载导入数据：
+
+```cmd
+curl --location-trusted -u root: -T amazon_reviews_2010.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+curl --location-trusted -u root: -T amazon_reviews_2011.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+curl --location-trusted -u root: -T amazon_reviews_2012.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+curl --location-trusted -u root: -T amazon_reviews_2013.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+curl --location-trusted -u root: -T amazon_reviews_2014.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+curl --location-trusted -u root: -T amazon_reviews_2015.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
+```
+
+> 数据文件可能超过10gb，您可能需要调整be.conf中的streaming_road_max_mb，以防止超过流加载的上传大小限制。您可以按照以下步骤动态调整它：
+> ```cmd
+> curl -X POST http://{be_ip}:{be_http_port}/api/update_config?streaming_load_max_mb=32768
+> ```
+> 每个BE都需要执行上述命令。
+
+执行count查询确认数据导入成功：
+
+```sql
+mysql> SELECT COUNT(*) FROM amazon_reviews;
++-----------+
+| count(*)  |
++-----------+
+| 135589433 |
++-----------+
+```
+
+#### 3.5.4.3 查询
+首先，运行不带任何索引的查询。WHERE子句包含LIKE条件，查询耗时7.60秒：
+
+```sql
+SELECT
+    product_id,
+    any(product_title),
+    AVG(star_rating) AS rating,
+    COUNT(*) AS count
+FROM
+    amazon_reviews
+WHERE
+    review_body LIKE '%is super awesome%'
+GROUP BY
+    product_id
+ORDER BY
+    count DESC,
+    rating DESC,
+    product_id
+LIMIT 5;
+```
+
+结果：
+```cmd
++------------+------------------------------------------+--------------------+-------+
+| product_id | any_value(product_title)                 | rating             | count |
++------------+------------------------------------------+--------------------+-------+
+| B00992CF6W | Minecraft                                | 4.8235294117647056 |    17 |
+| B009UX2YAC | Subway Surfers                           | 4.7777777777777777 |     9 |
+| B00DJFIMW6 | Minion Rush: Despicable Me Official Game |              4.875 |     8 |
+| B0086700CM | Temple Run                               |                  5 |     6 |
+| B00KWVZ750 | Angry Birds Epic RPG                     |                  5 |     6 |
++------------+------------------------------------------+--------------------+-------+
+5 rows in set (7.60 sec)
+```
+
+接下来，添加一个NGram BloomFilter索引并再次运行相同的查询。查询耗时0.93秒，性能提升了8倍：
+
+```sql
+ALTER TABLE amazon_reviews ADD INDEX review_body_ngram_idx(review_body) USING NGRAM_BF PROPERTIES("gram_size"="10", "bf_size"="10240");
+```
+
+```cmd
++------------+------------------------------------------+--------------------+-------+
+| product_id | any_value(product_title)                 | rating             | count |
++------------+------------------------------------------+--------------------+-------+
+| B00992CF6W | Minecraft                                | 4.8235294117647056 |    17 |
+| B009UX2YAC | Subway Surfers                           | 4.7777777777777777 |     9 |
+| B00DJFIMW6 | Minion Rush: Despicable Me Official Game |              4.875 |     8 |
+| B0086700CM | Temple Run                               |                  5 |     6 |
+| B00KWVZ750 | Angry Birds Epic RPG                     |                  5 |     6 |
++------------+------------------------------------------+--------------------+-------+
+5 rows in set (0.93 sec)
+```
 
