--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据划分-自动分区.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据划分-自动分区.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-数据划分-自动分区
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 3-7-4
+nav_order: 030704
 ---
 
 # 自动分区
