--- a/docs/Doris/Doris Guides 3.0/数据表设计-表索引-倒排索引.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-表索引-倒排索引.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-表索引-倒排索引
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 3-3-3
+nav_order: 030303
 ---
 
 # 倒排索引
