--- a/docs/Doris/Doris Guides 3.0/数据表设计-表索引-索引概述.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-表索引-索引概述.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-表索引-索引概述
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 3-3-1
+nav_order: 030301
 ---
 
 # 索引概述
