--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据库建表最佳实践.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据库建表最佳实践.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-数据库建表最佳实践
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 0310
+nav_order: 03-10
 ---
 
 # 数据库建表最佳实践
