--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-使用注意.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-使用注意.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-Tiered Storage-使用注意
+title: 数据表设计-数据模型-使用注意
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 030505
+nav_order: 03-05-05
 ---
 
 # 使用注意
