--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-模型概述.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-模型概述.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-Tiered Storage-模型概述
+title: 数据表设计-数据模型-模型概述
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 030501
+nav_order: 03-05-01
 ---
 
 # 模型概述
