--- a/docs/Doris/Doris Guides 3.0/数据表设计-表索引-前缀索引与排序键.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-表索引-前缀索引与排序键.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-表索引-前缀索引与排序键
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 030302
+nav_order: 03-03-02
 ---
 
 # 前缀索引与排序键
