--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据划分-常见问题.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据划分-常见问题.md
@@ -3,7 +3,7 @@ layout: default
 title: 数据表设计-数据划分-常见问题
 parent: Doris Guides 3.0
 grand_parent: Doris
-nav_order: 030707
+nav_order: 03-07-07
 ---
 
 # 常见问题
