--- a/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-聚合模型.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计-数据模型-聚合模型.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 数据表设计-Tiered Storage-聚合模型
+title: 数据表设计-数据模型-聚合模型
 parent: Doris Guides 3.0
 grand_parent: Doris
 nav_order: 03-05-04
