--- a/docs/Doris/Doris Guides 3.0/数据表设计/Tiered Storage/远程存储.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/Tiered Storage/远程存储.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-Tiered Storage-远程存储
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-04-02 
+title: 远程存储
+parent: 数据表设计
+ancestor: Doris
+nav_order: 2
 ---
 
 # 远程存储
