--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据模型/主键模型.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据模型/主键模型.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-数据模型-主键模型
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-05-03
+title: 主键模型
+parent: 数据模型
+ancestor: 数据表设计
+nav_order: 3
 ---
 
 # 主键模型
