--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据类型.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据类型.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-数据类型
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-02
+title: 数据类型
+parent: 数据表设计
+grand_parent: Doris Guides 3.0
+nav_order: 2
 ---
 
 # 数据类型
