--- a/docs/Doris/Doris Guides 3.0/数据表设计/自增列.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/自增列.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-自增列
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-09
+title: 自增列
+parent: 数据表设计
+grand_parent: Doris Guides 3.0
+nav_order: 9
 ---
 
 # 自增列
