--- a/docs/Doris/Doris Guides 3.0/数据表设计/表索引/索引概述.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/表索引/索引概述.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-表索引-索引概述
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-03-01
+title: 索引概述
+parent: 表索引
+ancestor: 数据表设计
+nav_order: 1
 ---
 
 # 索引概述
