--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/基本概念.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/基本概念.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-数据划分-基本概念
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-07-01
+title: 基本概念
+parent: 数据划分
+ancestor: 数据表设计
+nav_order: 1
 ---
 
 # 基本概念
