--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/常见问题.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/常见问题.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-数据划分-常见问题
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-07-07
+title: 常见问题
+parent: 数据划分
+ancestor: 数据表设计
+nav_order: 7
 ---
 
 # 常见问题
