--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/自动分桶.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据划分/自动分桶.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-数据划分-自动分桶
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-07-06
+title: 自动分桶
+parent: 数据划分
+ancestor: 数据表设计
+nav_order: 6
 ---
 
 # 自动分桶
