--- a/docs/Doris/Doris Guides 3.0/数据表设计/概览.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/概览.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-概览
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-01
+title: 概览
+parent: 数据表设计
+grand_parent: Doris Guides 3.0
+nav_order: 1
 ---
 
 # 概览
