--- a/docs/Doris/Doris Guides 3.0/数据表设计/行列混存.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/行列混存.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-行列混存
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-06
+title: 行列混存
+parent: 数据表设计
+grand_parent: Doris Guides 3.0
+nav_order: 6
 ---
 
 # 行列混存
