--- a/docs/Doris/Doris Guides 3.0/数据表设计/表索引/倒排索引.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/表索引/倒排索引.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 数据表设计-表索引-倒排索引
-parent: Doris Guides 3.0
-grand_parent: Doris
-nav_order: 03-03-03
+title: 倒排索引
+parent: 表索引
+ancestor: 数据表设计
+nav_order: 3
 ---
 
 # 倒排索引
