--- a/docs/Doris/Doris Guides 3.0/数据表设计/数据库建表最佳实践.md
+++ b/docs/Doris/Doris Guides 3.0/数据表设计/数据库建表最佳实践.md
@@ -27,7 +27,7 @@ nav_order: 10
 
 ### DUPLICATE KEY 表模型
 
-![](../../../assets/images/Doris/attachments/duplicate-key-model-example-f0d28a2328a37f044e15cb967ea995ca.png)
+![](../../../../assets/images/Doris/attachments/duplicate-key-model-example-f0d28a2328a37f044e15cb967ea995ca.png)
 
 只指定排序列，相同的 KEY 行不会合并。
 
@@ -56,7 +56,7 @@ DISTRIBUTED BY HASH(sessionid, visitorid) BUCKETS 10;
 
 ### AGGREGATE KEY 表模型
 
-![](../../../assets/images/Doris/attachments/aggregate-key-model-example-56f5457b8684e8da1222fb19c7756ec1.png)
+![](../../../../assets/images/Doris/attachments/aggregate-key-model-example-56f5457b8684e8da1222fb19c7756ec1.png)
 
 AGGREGATE KEY 相同时，新旧记录进行聚合，目前支持的聚合方式：
 1. SUM：求和，多行的 Value 进行累加。
@@ -308,7 +308,7 @@ Doris 支持多种字段类型，例如精确去重 BITMAP、模糊去重 HLL、
 
 ## 数据表创建
 
-![](../../../assets/images/Doris/attachments/create-table-example-eeb2537949e854e2dbb17326a2c2a228.png)
+![](../../../../assets/images/Doris/attachments/create-table-example-eeb2537949e854e2dbb17326a2c2a228.png)
 
 建表时除了要注意数据表模型、索引和字段类型的选择还需要注意分区分桶的设置。
 
