--- a/docs/Doris/Apache Doris 中文手册 v3.0/4. 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.2 Broker Load.md
+++ b/docs/Doris/Apache Doris 中文手册 v3.0/4. 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.2 Broker Load.md
@@ -658,8 +658,8 @@ WITH BROKER "broker_name"
 !!! warning 提示
     啊不是大风
 
-!!! 是的发生的 提示
-    This is the admonition body
+{: .highlight }
+A paragraph
 
-> [!NOTE]
-> Useful information that users should know, even when skimming content.
+!!! 是的发生的 提示 {: .highlight }
+    A paragraph
