--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
@@ -1,4 +1,4 @@
-# 使用 Docker 开发镜像编译（推荐）
+# 1.1.1 使用 Docker 开发镜像编译（推荐）
 本文介绍如何使用 Doris 官方提供的编译镜像来编译 Doris，由于此镜像由官方维护，且会随编译依赖及时更新，所以推荐用户使用这种方式编译
 
 !!! tip 提示
@@ -36,10 +36,15 @@ apache/doris    build-env-for-2.0    f29cf1979dba    3 days ago    3.3GB
 ```
 
 注意事项：
+
 * 针对不同的 Doris 版本，需要下载对应的镜像版本。镜像版本号与 Doris 版本号统一，比如可以使用 apache/doris:build-env-for-2.0 来编译 2.0 版本。
+
 * `apache/doris:build-env-ldb-toolchain-latest` 用于编译最新主干版本代码，会随主干版本不断更新。可以查看 docker/README.md 中的更新时间。
+
 * 名称中带有 no-AVX2 字样的镜像中的第三方库，可以运行在不支持 AVX2 指令的 CPU 上。可以配合 USE_AVX2=0 选项，编译 Doris。
+
 * 编译镜像变更信息可参考 ChangeLog。
+
 * 最新版本的 `apache/doris:build-env-ldb-toolchain-latest` 镜像中同时包含 JDK 8 和 JDK 17。2.1（含）之前的版本，请使用 JDK 8。3.0（含）之后的版本或 master 分支，请使用 JDK 17。
 
     ```shell
@@ -75,9 +80,13 @@ docker run -it --network=host --name mydocker -v ~/.m2:/root/.m2 -v ~/doris-bran
 ```
 
 注意：
+
 * 建议以挂载本地 Doris 源码目录的方式运行镜像，这样编译的产出二进制文件会存储在宿主机中，不会因为镜像退出而消失。
+
 * 建议同时将镜像中 maven 的 `.m2` 目录挂载到宿主机目录，以防止每次启动镜像编译时，重复下载 maven 的依赖库。
+
 * 运行镜像编译时需要下载其它文件，可以采用 host 模式启动镜像。host 模式不需要加 -p 进行端口映射，和宿主机共享网络 IP 和端口。
+
 * Docker run 部分参数说明如下：
 
     | 参数 | 注释 |
