--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
@@ -1,10 +1,12 @@
 # 1.1.1 使用 Docker 开发镜像编译（推荐）
+
 本文介绍如何使用 Doris 官方提供的编译镜像来编译 Doris，由于此镜像由官方维护，且会随编译依赖及时更新，所以推荐用户使用这种方式编译
 
 !!! tip 提示
     目前还不支持存算分离模式编译部署
 
 ## 1 安装 Docker
+
 比如在 CentOS 下，执行命令安装 Docker
 
 ```shell
@@ -14,6 +16,7 @@ yum install docker
 或参考 Docker 官方安装文档进行安装
 
 ## 2 下载 Doris 构建镜像
+
 不同的 Doris 版本，需要下载不同的构建镜像。其中 apache/doris:build-env-ldb-toolchain-latest 用于编译最新主干版本代码，会随主干版本不断更新。
 
 | 镜像版本 | Doris 版本 |
@@ -58,11 +61,13 @@ apache/doris    build-env-for-2.0    f29cf1979dba    3 days ago    3.3GB
     ```
 
 ## 3 编译 Doris
+
 ### 3.1 下载 Doris 源码
+
 登录到宿主机，通过 git clone 获取 Doris 2.0 分支上的最新代码。
 
 ```shell
-$ git clone -b branch-2.0 https://github.com/apache/doris.git
+git clone -b branch-2.0 https://github.com/apache/doris.git
 ```
 
 下载后，源代码路径，假设放到了 doris-branch-2.0 这个目录下。
@@ -117,4 +122,5 @@ $ BUILD_TYPE=Debug sh build.sh
 编译完成后，产出文件在 `output/` 目录中。
 
 ## 4 自行编译开发环境镜像
+
 可以自己创建一个 Doris 开发环境镜像，具体可参阅 `docker/README.md` 文件。
