--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
@@ -1,26 +1,21 @@
----
-layout: default
-title: 1.1.2 使用 LDB Toolchain 编译（推荐）
-parent: 1.1 源码编译
-nav_order: 2
----
+# 1.1.2 使用 LDB Toolchain 编译（推荐）
 
-# 使用 LDB Toolchain 编译（推荐）
 本文档主要介绍如何使用 LDB Toolchain 编译 Doris。该方式目前作为 Docker 编译方式的补充，方便没有 Docker 环境的开发者和用户编译 Doris 源码。Doris 目前推荐的 LDB Toolchain 版本为 0.17, 其中含有 clang-16 和 gcc-11。
 
-> 提示
-> 
-> LDB Toolchain 全称 Linux Distribution Based Toolchain Generator，它有助于在几乎所有 Linux 发行版上编译现代 C++ 项目。
+!!! tip 提示
+    LDB Toolchain 全称 Linux Distribution Based Toolchain Generator，它有助于在几乎所有 Linux 发行版上编译现代 C++ 项目。
 
 感谢 Amos Bird 的贡献。
 
-## 准备编译环境
+## 1 准备编译环境
+
 该方式适用于绝大多数 Linux 发行版（CentOS，Ubuntu 等）。
-1. 下载 `ldb_toolchain_gen.sh` 
+
+1. 下载 `ldb_toolchain_gen.sh`
     可以从这里下载最新的 `ldb_toolchain_gen.sh` 。该脚本用于生成 LDB Toolchain
 
     > 提示
-    > 
+    >
     > 更多信息，可访问 [https://github.com/amosbird/ldb_toolchain_gen](https://github.com/amosbird/ldb_toolchain_gen)
 2. 执行以下命令生成 ldb toolchain
 
@@ -38,6 +33,7 @@ nav_order: 2
     ├── test
     └── usr
     ```
+
 3. 下载并安装其他编译组件
     * 下载 Java8，安装到 /path/to/java
         3.0（含）之后的版本，或 master 分支，请使用 Java 17。
@@ -65,6 +61,7 @@ nav_order: 2
             make && \
             make install
         ```
+
 4. 下载 Doris 源码
 
     ```shell
@@ -81,16 +78,17 @@ nav_order: 2
     export PATH=/path/to/ldb_toolchain/bin:$PATH
     ```
 
-## 编译 Doris
-> 提示
-> 
-> Doris 源码编译时首先会下载三方库进行编译，可以参考下文下载预编译版本的三方库，省去三方库编译
+## 2 编译 Doris
+
+!!! tip 提示
+    Doris 源码编译时首先会下载三方库进行编译，可以参考下文下载预编译版本的三方库，省去三方库编译
 
 1. 进入 Doris 源码目录，执行如下命令查看编译机器是否支持 AVX2 指令集
 
     ```shell
-    $ cat /proc/cpuinfo | grep avx2
+    cat /proc/cpuinfo | grep avx2
     ```
+
 2. 执行编译
 
     ```shell
@@ -106,7 +104,8 @@ nav_order: 2
 
     该脚本会先编译第三方库，之后再编译 Doris 组件（FE、BE、MS）。编译产出在 `output/` 目录下。 MS 模块是 doris 存算分离模式依赖的模块，详细说明请参考此连接
 
-## 预编译三方库
+## 3 预编译三方库
+
 `build.sh` 脚本会先编译第三方库。你也可以直接下载预编译好的三方库：
 
 ```shell
