--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.3 Linux 平台直接编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.3 Linux 平台直接编译.md
@@ -1,11 +1,5 @@
----
-layout: default
-title: 1.1.3 Linux 平台直接编译
-parent: 1.1 源码编译
-nav_order: 3
----
+# 1.1.3 Linux 平台直接编译
 
-# Linux 平台直接编译
 这里使用 Ubuntu 16.04 及以上系统来直接编译。
 
 1. 确保拥有以下系统依赖
@@ -18,11 +12,13 @@ nav_order: 3
     sudo apt install gcc-10 g++-10 
     sudo apt-get install autoconf automake libtool autopoint
     ```
+
 2. 与使用 Docker 开发镜像编译一样，编译之前先检查是否支持 AVX2 指令
 
     ```shell
-    $ cat /proc/cpuinfo | grep avx2
+    cat /proc/cpuinfo | grep avx2
     ```
+
 3. 支持则使用下面命令进行编译
 
     ```shell
@@ -35,4 +31,5 @@ nav_order: 3
     # 如需编译 Debug 版本的 BE，增加 BUILD_TYPE=Debug
     $ BUILD_TYPE=Debug sh build.sh
     ```
+
 4. 编译完成后，产出文件在 `output/` 目录中。
