--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.4 Arm 平台上编译.md
@@ -1,28 +1,23 @@
----
-layout: default
-title: 1.1.4 Arm 平台上编译
-parent: 1.1 源码编译
-nav_order: 4
----
+# 1.1.4 Arm 平台上编译
 
-# Arm 平台上编译
 本文档介绍如何在 ARM64 平台上编译 Doris。
 
 注意，该文档仅作为指导性文档。在不同环境中编译可能出现其他错误。如遇问题，欢迎向 Doris 提出 Issue 或解决方案。
 
-> 提示
-> 
-> 目前还不支持存算分离模式编译部署
+!!! tip 提示
+    目前还不支持存算分离模式编译部署
 
-## 硬件/操作系统环境
+## 1 硬件/操作系统环境
+
 * 系统版本：CentOS 7.9、Ubuntu 20.04
 * 系统架构：ARM64
 * 内存：16 GB +
 
-## 软件环境配置
-### 软件环境对照表
+## 2 软件环境配置
 
-| 组件名称 | 组件版本 | 
+### 2.1 软件环境对照表
+
+| 组件名称 | 组件版本 |
 | -- | -- |
 | Git | 2.0+ |
 | JDK | 1.8.0 |
@@ -33,7 +28,8 @@ nav_order: 4
 | autoconf | 2.69 |
 | bison | 3.0.4 |
 
-### CentOS 7.9 软件环境安装
+### 2.2 CentOS 7.9 软件环境安装
+
 1. 创建软件下载安装包根目录和软件安装根目录
 
     ```shell
@@ -43,6 +39,7 @@ nav_order: 4
     # 创建软件安装根目录
     mkdir /opt/software
     ```
+
 2. 安装依赖项
 
     ```shell
@@ -89,6 +86,7 @@ nav_order: 4
         make && \
         make install
     ```
+
 3. 配置环境变量
 
     ```shell
@@ -114,12 +112,14 @@ nav_order: 4
     > gcc-11
     ```
 
-### Ubuntu 20.04 软件环境安装
+### 2.3 Ubuntu 20.04 软件环境安装
+
 1. 更新 apt-get 软件库
 
     ```shelll
     apt-get update
     ```
+
 2. 重新配置 shell
 
     ```shell
@@ -130,6 +130,7 @@ nav_order: 4
     sudo dpkg-reconfigure dash
     # 然后选择 no 或者 否 ，并确认。这样做将重新配置 dash，并使其不作为默认的 shell 工具
     ```
+
 3. 创建软件下载安装包根目录和软件安装根目录
 
     ```shell
@@ -139,6 +140,7 @@ nav_order: 4
     # 创建软件安装根目录
     mkdir /opt/software
     ```
+
 4. 安装依赖项
 
     ```shell
@@ -194,6 +196,7 @@ nav_order: 4
         make && \
         make install
     ```
+
 5. 配置环境变量
 
     ```shell
@@ -219,7 +222,8 @@ nav_order: 4
     > gcc-11
     ```
 
-## 编译
+## 3 编译
+
 目前 ARM 环境仅推荐使用 LDB Toolchain 进行编译。
 
 在 ARM 平台编译 Doris 时，请关闭 AVX2 和 LIBUNWIND 三方库：
@@ -231,7 +235,8 @@ export USE_UNWIND=OFF
 
 然后参考 使用 LDB Toolchain 编译文档，进行编译。
 
-## 常见问题
+## 4 常见问题
+
 1. 编译第三方库 libhdfs3.a，找不到文件夹
     在执行编译安装过程中，出现了如下报错 `not found lib/libhdfs3.a file or directory` 。
 
@@ -259,6 +264,7 @@ export USE_UNWIND=OFF
     ```shell
     sudo ln -s /usr/bin/python2.7 /usr/bin/python
     ```
+
 3. 编译结束后没有 output 目录
     build.sh 执行结束后，目录中未发现 output 文件夹。
 
@@ -269,13 +275,14 @@ export USE_UNWIND=OFF
     ```shell
     sh build.sh --clean
     ```
+
 4. 剩余空间不足，编译失败
     编译过程中报“构建 CXX 对象失败，提示剩余空间不足”。
 
     ```shell
     fatal error: error writing to /tmp/ccKn4nPK.s: No space left on device 1112 | } // namespace doris::vectorized compilation terminated.
     ```
-    
+
     解决方案：扩大设备剩余空间，如删除不需要的文件等。
 5. 在 pkg.config 中找不到 pkg.m4 文件
     编译过程中出现了找不到文件错误，报错如下：
@@ -296,6 +303,7 @@ export USE_UNWIND=OFF
     cp /opt/software/ldb_toolchain/share/aclocal/pkg.m4 /opt/doris/thirdparty/src/libxml2-v2.9.10/m4
     sh /opt/doris/thirdparty/build-thirdparty.sh
     ```
+
 6. 执行测试 CURL_HAS_TLS_PROXY 失败
 
     三方包编译过程报错，错误如下：
@@ -304,7 +312,7 @@ export USE_UNWIND=OFF
     -- Performing Test CURL_HAS_TLS_PROXY - Failed CMake Error at cmake/dependencies.cmake:15 (get_property): INTERFACE_LIBRARY targets may only have whitelisted properties. The property "LINK_LIBRARIES_ALL" is not allowed.
     ```
 
-    查看日志以后，发现内部是由于 curl `No such file or directory` 
+    查看日志以后，发现内部是由于 curl `No such file or directory`
 
     ```shell
     fa``tal error: curl/curl.h: No such file or directory 2 | #include <curl/curl.h> compilation terminated. ninja: build stopped: subcommand failed.
@@ -325,14 +333,15 @@ export USE_UNWIND=OFF
     gcc --version
     # 显示 gcc-11
     ```
+
 7. 其他组件问题
     如有以下组件的错误提示，则统一以该方案解决：
     * bison 相关：安装 bison-3.0.4 时报 fseterr.c 错误
     * flex 相关：flex 命令未找到
     * cmake 相关
-            * cmake 命令未找到
+            *cmake 命令未找到
             * cmake 找不到依赖库
-            * cmake 找不到 CMAKE_ROOT
+            *cmake 找不到 CMAKE_ROOT
             * cmake 环境变量 CXX 中找不到编译器集
     * boost 相关：Boost.Build 构建引擎失败
     * mysql 相关：找不到 mysql 的客户端依赖 a 文件
