--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.6 在 MacOS 平台上编译.md
@@ -1,22 +1,17 @@
----
-layout: default
-title: 1.1.6 在 MacOS 平台上编译
-parent: 1.1 源码编译
-nav_order: 6
----
+# 1.1.6 在 MacOS 平台上编译
 
-# 在 MacOS 平台上编译
 本文介绍如何在 macOS 平台上编译源码。
 
-> 提示
-> 
-> 目前还不支持存算分离模式编译部署
+!!! tip 提示
+    目前还不支持存算分离模式编译部署
 
-## 环境要求
+## 1 环境要求
+
 * macOS 12 (Monterey) 及以上（Intel 和 Apple Silicon 均支持）
 * Homebrew
 
-## 源码编译
+## 2 源码编译
+
 1. 使用 Homebrew 安装依赖
 
     ```shell
@@ -33,7 +28,8 @@ nav_order: 6
 
     Doris 源码编译时首先会下载三方库源码进行编译，为了节省编译时间，可以下载社区提供的三方库的预编译版本。参见下面的使用预编译三方库提速构建过程。
 
-## 启动
+## 3 启动
+
 1. 调大 file descriptors limit
 
     ```shell
@@ -48,12 +44,14 @@ nav_order: 6
     # 如果是 zsh，执行下面语句
     echo 'ulimit -n 65536' >>~/.zshrc
     ```
+
 2. 启动 BE
 
     ```shell
     cd output/be/bin
     ./start_be.sh --daemon
     ```
+
 3. 启动 FE
 
     ```shell
@@ -61,7 +59,8 @@ nav_order: 6
     ./start_fe.sh --daemon
     ```
 
-## 使用预编译三方库进行提速
+## 4 使用预编译三方库进行提速
+
 可以在 Apache Doris Third Party Prebuilt 页面直接下载预编译好的第三方库，省去编译第三方库的过程，参考下面的命令。
 
 ```shell
@@ -83,4 +82,4 @@ cd installed/bin
 ./thrift --version
 ```
 
-运行 `protoc` 和 `thrift` 的时候可能会遇到无法打开，因为无法验证开发者的问题，可以到前往 `安全性与隐私` 。点按 `通用` 面板中的 `仍要打开` 按钮，以确认打算打开该二进制。参考 https://support.apple.com/zh-cn/HT202491。
+运行 `protoc` 和 `thrift` 的时候可能会遇到无法打开，因为无法验证开发者的问题，可以到前往 `安全性与隐私` 。点按 `通用` 面板中的 `仍要打开` 按钮，以确认打算打开该二进制。参考 <https://support.apple.com/zh-cn/HT202491。>
