--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
@@ -1,14 +1,9 @@
----
-layout: default
-title: 1.2.3.3.5 配置部署计算组
-parent: 1.2.3.3 Compute storage decoupled
-nav_order: 5
----
+# 1.2.3.3.5 配置部署计算组
 
-# 配置部署计算组
 存算分离计算组（ Compute Group ）负责数据导入并缓存对象存储中的数据，计算组之间相互隔离。
 
-## 指定计算组名称
+## 1 指定计算组名称
+
 以下配置部署一套最简计算组：
 
 ```shell
@@ -23,11 +18,11 @@ spec:
 
 `{beImage}` 为部署 BE 服务的 image 。
 
-> 提示
-> 
-> cg1 为计算组的名称，执行 sql 的过程中可通过计算组名称选定想要使用的计算组。
+!!! tip 提示
+    cg1 为计算组的名称，执行 sql 的过程中可通过计算组名称选定想要使用的计算组。
 
-## 配置多计算组
+## 2 配置多计算组
+
 一个 `DorisDisaggregatedCluster` 资源可部署多套计算组，每套计算组之间相互独立，彼此之间独自运作。
 
 部署两套计算组最简部署如下：
@@ -47,11 +42,11 @@ spec:
 
 修改如下配置到需要部署存算分离 `DorisDisaggregatedCluster` 资源中，可部署 2 套计算组，一套可部署 3 个 包含 BE 服务的 pod ， 一套可部署 2 个包含 BE 服务的 pod 。 `{beImage}` 指定想要使用的 BE 服务的 image 。
 
-> 提示
-> 
-> 多套计算组使用的 image 尽量保持一致。
+!!! tip 提示
+    多套计算组使用的 image 尽量保持一致。
 
-## 配置服务计算资源
+## 3 配置服务计算资源
+
 设置每个 pod 中 BE（计算服务）容器可使用的 CPU 和 Memory 资源使用量。在 resources.requests 和 resources.limits 指定 CPU 和 Memory 使用量。
 
 ```shell
@@ -69,19 +64,24 @@ spec:
 
 上述配置指定了名称 cg1 的计算组可使用的计算资源。可根据需要填写，并配置到部署存算分离 `DorisDisaggregatedCluster` 资源中。`{beImage}` 为想使用的 BE 镜像。
 
-## 配置 Cache 持久化存储
+## 4 配置 Cache 持久化存储
+
 默认情况下，每个 BE 服务会使用 EmptyDir 存储模式来缓存数据，在真实使用场景下需要根据实际需要定义需要的存储大小以及希望使用的 StorageClass 。
-### 定制化配置文件
+
+### 4.1 定制化配置文件
+
 存算分离下，每个计算组的 BE 服务默认使用镜像内的配置文件启动，在 K8s 部署中可使用 ConfigMap 资源自定义 BE 启动配置，在挂载定制化 ConfigMap 中，展示了一个 ConfigMap 配置样例。请根据存算分离文档进行 BE 的相关启动配置， `deploy_mode` 在 K8s 部署中相关服务自动添加，可无需指定。
 
-### 设置服务储存配置
+### 4.2 设置服务储存配置
+
 BE 在存算分离模式下必须指定 Cache 配置，请按照存算分离文档的 `file_cache_path` 相关介绍配置 Cache 存储。服务在部署时，Doris-Operator 会自动根据持久化相关配置模板挂载持久化存储。
 
 比如： `file_cache_path` 配置为 `file_cache_path = [{"path":"/opt/apache-doris/be/file_cache","total_size":107374182400,"query_limit":107374182400}]` ，Doris-Operator 相关服务自动为计算服务添加存储配置信息，这些信息能够申请到挂载点为 `/opt/apache-doris/be/file_cache` 且容量为 100Gi 的磁盘。
 
 当 file_cache_path 中 total_size 大于持久化配置模版中设置的存储容量，Doris-Operator 会将持久化配置改为 total_size 的大小，防止服务出现非预期故障。
 
-### 挂载定制化 ConfigMap
+### 4.3 挂载定制化 ConfigMap
+
 通过上述规则制定好配置文件后，部署到 `DorisDisaggregatedCluster` 部署的命名空间，并修改需要部署的 `DorisDisaggregatedCluster` 资源指定哪一个计算组使用定制化配置启动。
 
 如启动配置如下：
@@ -114,7 +114,7 @@ spec:
 
 修改好配置后，将配置信息更新到部署的 DorisDisaggregatedCluster 资源中。
 
-### 配置持久化存储模板
+### 4.4 配置持久化存储模板
 
 ```shell
 spec:
@@ -134,7 +134,7 @@ spec:
 
 BE 服务默认 Cache 配置为 `file_cache_path = [{"path":"/opt/apache-doris/be/file_cache","total_size":107374182400,"query_limit":107374182400}]` 存储容量总可使用容量为 100Gi ，查询可使用的最大容量为 100Gi 。K8s 部署模式下，Doris-Operator 会为每个路径挂载定制的持久化存储。如果需要指定多个路径挂载多盘作为数据缓存，请参考定制化配置文件。
 
-> 提示
-> 
-> * file_cache_path 的值必须是一个 JSON 数组。
-> * 所有的启动配置必须挂载到 /etc/doris 目录下。
+!!! tip 提示
+
+    * file_cache_path 的值必须是一个 JSON 数组。
+    * 所有的启动配置必须挂载到 /etc/doris 目录下。
