--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.1 快速部署.md
@@ -1,18 +1,14 @@
----
-layout: default
-title: 1.2.3.2.1 快速部署
-parent: 1.2.3.2 Compute storage coupled
-nav_order: 1
----
+# 1.2.3.2.1 快速部署
 
-# 快速部署
 本章节介绍如何在测试 Kubernetes 集群中部署 Doris Operator 与 Doris 集群。 部署操作如下：
+
 1. 创建 Kubernetes 测试集群
 2. 部署 Doris Operator
 3. 部署 Doris 集群
 4. 连接访问 Doris 集群
 
-## 第 1 步：创建 Kubernetes 测试集群
+## 1 创建 Kubernetes 测试集群
+
 此步骤简述在没有 k8s 集群的情况下如何快速搭建一套单节点 k8s 集群，如果已有 k8s 集群，此步骤请跳过。
 
 Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kind 使用 Docker 容器作为节点，在本地创建和运行 Kubernetes 集群。
@@ -24,6 +20,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     | Docker | >= 18.09 |
     | kubectl | >=1.19 |
     | kind | >=0.8.0 |
+
 2. 使用 kind 部署 Kubernetes 集群 本例中使用 kind 0.10.0 版本安装 Kubernetes 集群，命令如下：
 
     ```shell
@@ -43,6 +40,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     Set kubectl context to "kind-test-doris"
     You can now use your cluster with:
     ```
+
 3. 检查 Kubernetes 集群状态 使用以下命令检查 Kubernete 集群状态:
 
     ```shell
@@ -57,7 +55,8 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     To further debug and diagnose cluster problems, use 'kubectl cluster-info dump'.
     ```
 
-## 第 2 步：部署 Doris Operator
+## 2 部署 Doris Operator
+
 部署 Doris Operator 分成安装定义和部署 operator 服务两部分：
 
 1. 安装 Doris Operator CRD 通过以下命令添加 Doris Operator 的自定义资源（CRD）：
@@ -71,6 +70,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     ```shell
     customresourcedefinition.apiextensions.k8s.io/dorisclusters.doris.selectdb.com created
     ```
+
 2. 安装 Doris Operator 通过以下命令安装 Doris Operator ：
 
     ```shell
@@ -88,6 +88,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     serviceaccount/doris-operator created
     deployment.apps/doris-operator created
     ```
+
 3. 检查 Doris Operator 状态 通过以下命令检查 Doris Operator 的部署状态：
 
     ```shell
@@ -100,20 +101,23 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     NAME                              READY   STATUS    RESTARTS   AGE
     doris-operator-7f578c86cb-nz6jn   1/1     Running   0          19m
     ```
-    
+
     Doris Operator 相关配置以及其他部署方式可参考部署 operator 部分。
 
-## 第 3 步：部署 Doris 集群
+## 3 部署 Doris 集群
+
 1. 下载模板 Doris 部署模板：
 
     ```shell
     curl -O https://raw.githubusercontent.com/apache/doris-operator/master/doc/examples/doriscluster-sample.yaml
     ```
+
 2. 根据集群配置章节按需进行定制化配置，配置完成后通过如下命令部署：
 
     ```shell
     kubectl apply -f doriscluster-sample.yaml
     ```
+
 3. 检查集群部署状态： 通过查看 pods 的状态检查集群的状态：
 
     ```shell
@@ -122,7 +126,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
 
     期望结果：
 
-    ```shell    
+    ```shell
     NAME                       READY   STATUS    RESTARTS   AGE
     doriscluster-sample-fe-0   1/1     Running   0          2m
     doriscluster-sample-be-0   1/1     Running   0          3m
@@ -130,7 +134,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
 
     检查部署资源的状态：
 
-    ```shell    
+    ```shell
     kubectl get dcr -n doris
     ```
 
@@ -141,7 +145,8 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     doriscluster-sample   available   available
     ```
 
-## 第 4 步：连接访问 Doris 集群
+## 4 连接访问 Doris 集群
+
 在测试环境中快速部署的 Doris 集群，可以进入容器 FE 内部使用 MySQL Client 链接 Doris 进行测试操作。其他访问方式可参考集群配置访问章节配置使用。
 
 1. 获取 FE 容器名称:
@@ -157,6 +162,7 @@ Kind 是目前比较通用的创建本地 Kubernetes 测试环境的方案。Kin
     ```shell
     kubectl -n doris exec -it doriscluster-sample-fe-0 /bin/bash
     ```
+
 3. 在 FE 容器内部使用 MySQL Client 链接 Doris 集群：
 
     ```shell
