--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.2 部署 Doris Operator.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.2 Compute storage coupled/1.2.3.2.2 部署 Doris Operator.md
@@ -1,12 +1,7 @@
----
-layout: default
-title: 1.2.3.2.2 部署 Doris Operator
-parent: 1.2.3.2 Compute storage coupled
-nav_order: 2
----
+# 1.2.3.2.2 部署 Doris Operator
 
-# 部署 Doris Operator
-## 添加 Doris Cluster 资源定义
+## 1 添加 Doris Cluster 资源定义
+
 Doris Operator 使用自定义资源定义（Custom Resource Definition, CRD）扩展 Kubernetes。Doris Cluster 的 CRD 中封装了对 Doris 对象的描述，例如对 FE 或 BE 的描述，详细内容可以参考 doris-operator-api。在部署 Doris 前，需要先创建 Doris Cluster 的 CRD。
 
 通过以下命令可以在 Kubernetes 环境中部署 Doris Cluster CRD：
@@ -40,8 +35,10 @@ kubectl get crd | grep doris
 dorisclusters.doris.selectdb.com                      2024-02-22T16:23:13Z
 ```
 
-## 添加 Doris Operator
-### 方案一：快速部署 Doris Operator
+## 2 添加 Doris Operator
+
+### 2.1 方案一：快速部署 Doris Operator
+
 可以直接拉去仓库中的 Doris Operator 模板进行快速部署。
 
 使用以下命令可以在 Kubernetes 集群中部署 Doris Operator：
@@ -62,7 +59,8 @@ serviceaccount/doris-operator created
 deployment.apps/doris-operator created
 ```
 
-### 方案二：自定义部署 Doris Operator
+### 2.2 方案二：自定义部署 Doris Operator
+
 在创建完 CRD 后，在 Kubernetes 集群上部署 Doris Operator 有两种方式：在线与离线部署。
 
 在 operator.yaml 文件中规范了部署 operator 的服务的最低要求。为了适配复杂的生产环境，可以下载 operator.yaml 文件后，按照期望更新其中配置。
@@ -104,12 +102,13 @@ deployment.apps/doris-operator created
     ## save the doris operator image as a tar package
     docker save -o doris.k8s-operator-latest.tar selectdb/doris.k8s-operator:latest
     ```
-    
+
     将已打包的 tar 文件放置到所有的 Kubernetes node 节点中，运行以下命令上传镜像：
 
     ```shell
     docker load -i doris.k8s-operator-latest.tar
     ```
+
 2. 配置 Doris Operator
     下载 operator.yaml 文件后，可以根据生产环境期望修改模板。
 
@@ -131,6 +130,7 @@ deployment.apps/doris-operator created
             - "ALL"
     ...
     ```
+
 3. 安装 Doris Operator
 
     在修改 Doris Operator 模板后，可以使用 apply 命令部署 Operator：
@@ -151,10 +151,12 @@ deployment.apps/doris-operator created
     deployment.apps/doris-operator created
     ```
 
-### 方案三：Helm 部署 Doris Operator
+### 2.3 方案三：Helm 部署 Doris Operator
+
 Helm Chart 是一系列描述 Kubernetes 相关资源的 YAML 文件的封装。通过 Helm 部署应用时，你可以自定义应用的元数据，以便于分发应用。Chart 是 Helm 的软件包，采用 TAR 格式，用于部署 Kubernetes 原生应用程序。通过 Helm Chart 可以简化部署 Doris 集群的流程。
 
 **在线添加仓库**
+
 1. 添加部署仓库
     通过 `repo add` 命令添加远程仓库
 
@@ -167,6 +169,7 @@ Helm Chart 是一系列描述 Kubernetes 相关资源的 YAML 文件的封装。
     ```shell
     helm repo update doris-repo
     ```
+
 2. 安装 Doris Operator
     通过 `helm install` 命令可以使用默认配置在 doris 的 namespace 中安装 Doris Operator
 
@@ -195,12 +198,14 @@ Helm Chart 是一系列描述 Kubernetes 相关资源的 YAML 文件的封装。
 
 **离线添加仓库**
 如果服务器无法连接外网，需要预先下载 Doris Operator 与 Doris Cluster 的 chart 资源。
+
 1. 下载离线 chart 资源
     下载 `doris-operator-{chart_version}.tgz` 安装 Doris Operator chart。如需要下载 1.4.0 版本的 Doris Operator 可以使用以下命令：
 
     ```shell
     wget https://charts.selectdb.com/doris-operator-1.4.0.tgz
     ```
+
 2. 安装 Doris Operator
     通过 `helm install` 命令可以安装 Doris Operator。
 
@@ -227,7 +232,8 @@ Helm Chart 是一系列描述 Kubernetes 相关资源的 YAML 文件的封装。
     doris-operator-866bd449bb-zl5mr   1/1     Running   0          18m
     ```
 
-## 查看服务状态
+## 3 查看服务状态
+
 当部署 Operator 服务后，可以通过以下命令查看服务状态。
 
 ```shell
