--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
@@ -14,9 +14,8 @@
 1. 下载 `ldb_toolchain_gen.sh`
     可以从这里下载最新的 `ldb_toolchain_gen.sh` 。该脚本用于生成 LDB Toolchain
 
-    > 提示
-    >
-    > 更多信息，可访问 [https://github.com/amosbird/ldb_toolchain_gen](https://github.com/amosbird/ldb_toolchain_gen)
+    !!! tip 提示
+        更多信息，可访问 [https://github.com/amosbird/ldb_toolchain_gen](https://github.com/amosbird/ldb_toolchain_gen)
 
 2. 执行以下命令生成 ldb toolchain
 
