--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.5 N-Gram 索引.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.5 N-Gram 索引.md
@@ -1,26 +1,27 @@
----
-layout: default
-title: 3.3.5 N-Gram 索引
-parent: 3.3 表索引
-nav_order: 5
----
+# 3.3.5 N-Gram 索引
 
-# N-Gram 索引
-## 索引原理
+## 1 索引原理
+
 NGram BloomFilter 索引和 BloomFilter 索引类似，也是基于 BloomFilter 的跳数索引。
 
 与 BloomFilter 索引不同的是，NGram BloomFilter 索引用于加速文本 LIKE 查询，它存入 BloomFilter 的不是原始文本的值，而是对文本进行 NGram 分词，每个词作为值存入 BloomFilter。对于 LIKE 查询，将 LIKE '%pattern%' 的 pattern 也进行 NGram 分词，判断每个词是否在 BloomFilter 中，如果某个词不在则对应的数据块就不满足 LIKE 条件，可以跳过这部分数据减少IO加速查询。
 
-## 使用场景
+## 2 使用场景
+
 NGram BloomFilter 索引只能加速字符串 LIKE 查询，而且 LIKE pattern 中的连续字符个数要大于等于索引定义的 NGram 中的 N。
 
-**提示**
-* NGram BloomFilter 只支持字符串列，只能加速 LIKE 查询。
-* NGram BloomFilter 索引和 BloomFilter 索引为互斥关系，即同一个列只能设置两者中的一个。
-* NGram BloomFilter 索引的效果分析，跟 BloomFilter 索引类似。
+!!! tip
 
-## 使用语法
-### 创建 NGram BloomFilter 索引
+    * NGram BloomFilter 只支持字符串列，只能加速 LIKE 查询。
+    
+    * NGram BloomFilter 索引和 BloomFilter 索引为互斥关系，即同一个列只能设置两者中的一个。
+    
+    * NGram BloomFilter 索引的效果分析，跟 BloomFilter 索引类似。
+
+## 3 使用语法
+
+### 3.1 创建 NGram BloomFilter 索引
+
 在建表语句中 COLUMN 的定义之后是索引定义：
 
 ```sql
@@ -28,27 +29,34 @@ NGram BloomFilter 索引只能加速字符串 LIKE 查询，而且 LIKE pattern 
 ```
 
 语法说明如下：
-1. `idx_column_name(column_name)` 是必须的，`column_name` 是建索引的列名，必须是前面列定义中出现过的，`idx_column_name` 是索引名字，必须表级别唯一，建议命名规范：列名前面加前缀 `idx_` 
+
+1. `idx_column_name(column_name)` 是必须的，`column_name` 是建索引的列名，必须是前面列定义中出现过的，`idx_column_name` 是索引名字，必须表级别唯一，建议命名规范：列名前面加前缀 `idx_`
+
 2. `USING NGRAM_BF` 是必须的，用于指定索引类型是 NGram BloomFilter 索引
+
 3. `PROPERTIES` 是可选的，用于指定 NGram BloomFilter 索引的额外属性，目前支持的属性如下：
+
     * gram_size：NGram 中的 N，指定 N 个连续字符分词一个词，比如 'an ngram example' 在 N = 3 的时候分成 'an ', 'n n', ' ng', 'ngr', 'gra', 'ram' 6 个词。
+
     * bf_size：BloomFilter 的大小，单位是 Bit。bf_size 决定每个数据块对应的索引大小，这个值越大占用存储空间越大，同时 Hash 碰撞的概率也越低。
+
     * gram_size 建议取 LIKE 查询的字符串最小长度，但是不建议低于 2。一般建议设置 "gram_size"="3", "bf_size"="1024"，然后根据 Query Profile 调优。
+
 4. `COMMENT` 是可选的，用于指定索引注释
 
-### 查看 NGram BloomFilter 索引
+### 3.2 查看 NGram BloomFilter 索引
 
 ```sql
 SHOW CREATE TABLE table_ngrambf;
 ```
 
-### 删除 NGram BloomFilter 索引
+### 3.3 删除 NGram BloomFilter 索引
 
 ```sql
 ALTER TABLE table_ngrambf DROP INDEX idx_ngrambf;
 ```
 
-### 修改 NGram BloomFilter 索引
+### 3.4 修改 NGram BloomFilter 索引
 
 ```sql
 CREATE INDEX idx_column_name2(column_name2) ON table_ngrambf USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024") COMMENT 'username ngram_bf index';
@@ -56,10 +64,11 @@ CREATE INDEX idx_column_name2(column_name2) ON table_ngrambf USING NGRAM_BF PROP
 ALTER TABLE table_ngrambf ADD INDEX idx_column_name2(column_name2) USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024") COMMENT 'username ngram_bf index';
 ```
 
-## 使用示例
+## 4 使用示例
+
 以亚马逊产品的用户评论信息的数据集 amazon_reviews 为例展示 NGram BloomFilter 索引的使用和效果。
 
-### 建表
+### 4.1 建表
 
 ```sql
 CREATE TABLE `amazon_reviews` (  
@@ -88,7 +97,8 @@ PROPERTIES (
 );
 ```
 
-### 导入数据
+### 4.2 导入数据
+
 用 wget 或者其他工具从下面的地址下载数据集
 
 ```shell
@@ -111,9 +121,9 @@ curl --location-trusted -u root: -T amazon_reviews_2014.snappy.parquet -H "forma
 curl --location-trusted -u root: -T amazon_reviews_2015.snappy.parquet -H "format:parquet" http://127.0.0.1:8030/api/${DB}/amazon_reviews/_stream_load
 ```
 
-> **信息**
-> 
-> 上面的文件可能超过 10 GB，您可能需要调整 be.conf 的 streaming_load_max_mb 防止超过 stream load 文件上传大小的限制，可以通过下面方式动态调整
+!!! tip
+
+    上面的文件可能超过 10 GB，您可能需要调整 be.conf 的 streaming_load_max_mb 防止超过 stream load 文件上传大小的限制，可以通过下面方式动态调整
 
 ```shell
 curl -X POST http://{be_ip}:{be_http_port}/api/update_config?streaming_load_max_mb=32768
@@ -132,7 +142,8 @@ mysql> SELECT COUNT() FROM amazon_reviews;
 +-----------+
 ```
 
-### 查询
+### 4.3 查询
+
 首先在没有索引的时候运行查询，WHERE 条件中有 LIKE，耗时7.60s
 
 ```sql
