--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.5 使用注意.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.5 使用注意.md
@@ -1,18 +1,17 @@
----
-layout: default
-title: 3.5.5 使用注意
-parent: 3.5 数据模型
-nav_order: 5
----
+# 3.5.5 使用注意
 
-# 使用注意
-## 建表时列类型建议
+## 1 建表时列类型建议
+
 1. Key 列必须在所有 Value 列之前。
+
 2. 尽量选择整型类型。因为整型类型的计算和查找效率远高于字符串。
+
 3. 对于不同长度的整型类型的选择原则，遵循够用即可。
+
 4. 对于 VARCHAR 和 STRING 类型的长度，遵循够用即可。
 
-## 聚合模型的局限性
+## 2 聚合模型的局限性
+
 这里针对 Aggregate 模型，来介绍下聚合模型的局限性。
 
 在聚合模型中，模型对外展现的，是最终聚合后的数据。也就是说，任何还未聚合的数据（比如说两个不同导入批次的数据），必须通过某种方式，以保证对外展示的一致性。举例说明。
@@ -115,6 +114,7 @@ batch 2
 另一种方式，就是将如上的 `count` 列的聚合类型改为 REPLACE，且依然值恒为 1。那么 `select sum(count) from table;` 和 `select count(*) from table;` 的结果将是一致的。并且这种方式，没有导入重复行的限制。
 
 ## Unique 模型的写时合并实现
+
 Unique 模型的写时合并实现没有聚合模型的局限性，还是以刚才的数据为例，写时合并为每次导入的 rowset 增加了对应的 delete bitmap，来标记哪些数据被覆盖。第一批数据导入后状态如下
 
 batch 1
@@ -145,15 +145,22 @@ batch 2
 
 在测试环境中，count(*) 查询在 Unique 模型的写时合并实现上的性能，相比聚合模型有 10 倍以上的提升。
 
-## Duplicate 模型
+## 3 Duplicate 模型
+
 Duplicate 模型没有聚合模型的这个局限性。因为该模型不涉及聚合语意，在做 count(*) 查询时，任意选择一列查询，即可得到语意正确的结果。
 
-## Key 列的不同意义
+## 4 Key 列的不同意义
+
 Duplicate、Aggregate、Unique 模型，都会在建表指定 Key 列，然而实际上是有所区别的：对于 Duplicate 模型，表的 Key 列，可以认为只是 "排序列"，并非起到唯一标识的作用。而 Aggregate、Unique 模型这种聚合类型的表，Key 列是兼顾 "排序列" 和 "唯一标识列"，是真正意义上的 "Key 列"。
 
-## 模型选择建议
+## 5 模型选择建议
+
 因为数据模型在建表时就已经确定，且无法修改。所以，选择一个合适的数据模型非常重要。
+
 1. Aggregate 模型可以通过预聚合，极大地降低聚合查询时所需扫描的数据量和查询的计算量，非常适合有固定模式的报表类查询场景。但是该模型对 count(*) 查询很不友好。同时因为固定了 Value 列上的聚合方式，在进行其他类型的聚合查询时，需要考虑语意正确性。
+
 2. Unique 模型针对需要唯一主键约束的场景，可以保证主键唯一性约束。但是无法利用 ROLLUP 等预聚合带来的查询优势。对于聚合查询有较高性能需求的用户，推荐使用自 1.2 版本加入的写时合并实现。
+
 3. Duplicate 适合任意维度的 Ad-hoc 查询。虽然同样无法利用预聚合的特性，但是不受聚合模型的约束，可以发挥列存模型的优势（只读取相关列，而不需要读取所有 Key 列）。
+
 4. 如果有部分列更新的需求，请查阅文档主键模型部分列更新 与 聚合模型部份列更新 获取相关使用建议。
