--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.2 数据类型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.2 数据类型.md
@@ -1,14 +1,8 @@
----
-layout: default
-title: 3.2 数据类型
-parent: 3. 数据表设计
-nav_order: 2
----
+# 3.2 数据类型
 
-# 数据类型
 Apache Doris 已支持的数据类型列表如下：
 
-## 数值类型
+## 1 数值类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
@@ -22,14 +16,14 @@ Apache Doris 已支持的数据类型列表如下：
 | DOUBLE | 8 | 浮点数，范围 [-1.7910^308 ~ 1.7910^308]。 |
 | DECIMAL | 4/8/16 | 高精度定点数，格式：DECIMAL(M[,D])。其中，M 代表一共有多少个有效数字（precision），D 代表小数位有多少数字（scale）。有效数字 M 的范围是 [1, 38]，小数位数字数量 D 的范围是 [0, precision]。0 < precision <= 9 的场合，占用 4 字节。9 < precision <= 18 的场合，占用 8 字节。16 < precision <= 38 的场合，占用 16 字节。 |
 
-## 日期类型
+## 2 日期类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
 | DATE | 16 | 日期类型，目前的取值范围是 ['0000-01-01', '9999-12-31']，默认的打印形式是 'yyyy-MM-dd'。 |
 | DATETIME | 16 | 日期时间类型，格式：DATETIME([P])。可选参数 P 表示时间精度，取值范围是 [0, 6]，即最多支持 6 位小数（微秒）。不设置时为 0。取值范围是 ['0000-01-01 00:00:00[.000000]', '9999-12-31 23:59:59[.999999]']。打印的形式是 'yyyy-MM-dd HH:mm:ss.SSSSSS'。 |
 
-## 字符串类型
+## 3 字符串类型
 
 | 类型名 | 存储空间（字节） | 描述
 | -- | -- | -- |
@@ -37,7 +31,7 @@ Apache Doris 已支持的数据类型列表如下：
 | VARCHAR | 不定长 | 变长字符串，M 代表的是变长字符串的字节长度。M 的范围是 1-65533。变长字符串是以 UTF-8 编码存储的，因此通常英文字符占 1 个字节，中文字符占 3 个字节。
 | STRING | 不定长 | 变长字符串，默认支持 1048576 字节（1MB），可调大到 2147483643 字节（2GB）。可通过 BE 配置 string_type_length_soft_limit_bytes 调整。String 类型只能用在 Value 列，不能用在 Key 列和分区分桶列。
 
-## 半结构类型
+## 4 半结构类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
@@ -47,7 +41,7 @@ Apache Doris 已支持的数据类型列表如下：
 | JSON | 不定长 | 二进制 JSON 类型，采用二进制 JSON 格式存储，通过 JSON 函数访问 JSON 内部字段。长度限制和配置方式与 String 相同 |
 | VARIANT | 不定长 | 动态可变数据类型，专为半结构化数据如 JSON 设计，可以存入任意 JSON，自动将 JSON 中的字段拆分成子列存储，提升存储效率和查询分析性能。长度限制和配置方式与 String 相同。Variant 类型只能用在 Value 列，不能用在 Key 列和分区分桶列。 |
 
-## 聚合类型
+## 5 聚合类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
@@ -56,7 +50,7 @@ Apache Doris 已支持的数据类型列表如下：
 | QUANTILE_STATE | 不定长 | QUANTILE_STATE 是一种计算分位数近似值的类型，在导入时会对相同的 Key，不同 Value 进行预聚合，当 value 数量不超过 2048 时采用明细记录所有数据，当 Value 数量大于 2048 时采用 TDigest 算法，对数据进行聚合（聚类）保存聚类后的质心点。QUANTILE_STATE 不能作为 Key 列使用，建表时配合聚合类型为 QUANTILE_UNION。用户不需要指定长度和默认值。长度根据数据的聚合程度系统内控制。QUANTILE_STATE 列只能通过配套的 QUANTILE_PERCENT、QUANTILE_UNION、TO_QUANTILE_STATE 等函数进行查询或使用。
 | AGG_STATE | 不定长 | 聚合函数，只能配合 state/merge/union 函数组合器使用。AGG_STATE 不能作为 Key 列使用，建表时需要同时声明聚合函数的签名。用户不需要指定长度和默认值。实际存储的数据大小与函数实现有关。
 
-## IP 类型
+## 6 IP 类型
 
 | 类型名 | 存储空间（字节） | 描述 |
 | -- | -- | -- |
