--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.2 明细模型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.2 明细模型.md
@@ -1,11 +1,5 @@
----
-layout: default
-title: 3.5.2 明细模型
-parent: 3.5 数据模型
-nav_order: 2
----
+# 3.5.2 明细模型
 
-# 明细模型
 在某些多维分析场景下，必须保留所有原始数据记录，针对这种需求，可以使用明细数据模型。在明细数据模型中，存储层会保留写入的所有数据。即使两行数据完全相同，也都会保留。建表语句中指定的 Duplicate Key，只是用来指明数据存储按照哪些列进行排序，可以用于优化常用查询。在 Duplicate Key 的选择上，建议选择前 2-4 列即可。
 
 举例如下，一个表有如下的数据列，需要保留所有原始数据记录，有两种方法可以创建明细模型的表，分别为：指定排序列以及默认为明细模型。
@@ -19,7 +13,8 @@ nav_order: 2
 | op_id | BIGINT | 负责人 ID |
 | op_time | DATETIME | 处理时间 |
 
-## 指定排序列的明细模型
+## 1 指定排序列的明细模型
+
 在建表语句中指定 Duplicate Key，用来指明数据存储按照这些 Key 列进行排序。在 Duplicate Key 的选择上，建议选择前 2-4 列即可。
 
 建表语句举例如下，指定了按照 timestamp、type 和 error_code 三列进行排序。
@@ -53,7 +48,8 @@ MySQL> desc example_tbl_duplicate;
 +------------+---------------+------+-------+---------+-------+
 ```
 
-## 默认为明细模型
+## 2 默认为明细模型
+
 当创建表的时候没有指定 Unique、Aggregate 或 Duplicate 时，会默认创建一个 Duplicate 模型的表，并自动按照一定规则选定排序列。建表语句举例如下，没有指定任何数据模型，则建立的是明细模型（Duplicate），排序列系统自动选定了前 3 列。
 
 ```sql
