--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.4 聚合模型.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.4 聚合模型.md
@@ -1,16 +1,11 @@
----
-layout: default
-title: 3.5.4 聚合模型
-parent: 3.5 数据模型
-nav_order: 4
----
+# 3.5.4 聚合模型
 
-# 聚合模型
 聚合数据模型，也称为 Aggregate 数据模型。可根据 Key 列聚合数据，Doris 存储层保留聚合后的数据，从而可以减少存储空间和提升查询性能；通常用于需要汇总或聚合信息（如总数或平均值）的情况。
 
 下面以实际的例子来说明什么是聚合模型，以及如何正确的使用聚合模型。
 
-## 导入数据聚合
+## 1 导入数据聚合
+
 假设业务有如下数据表模式：
 
 | ColumnName | Type | AggregationType | Comment |
@@ -52,17 +47,24 @@ PROPERTIES (
 表中的列按照是否设置了 AggregationType，分为 Key (维度列) 和 Value（指标列）。没有设置 AggregationType 的 user_id、date、age、sex 称为 Key，而设置了 AggregationType 的称为 Value。
 
 当导入数据时，对于 Key 列相同的行会聚合成一行，而 Value 列会按照设置的 AggregationType 进行聚合。AggregationType 目前有以下几种聚合方式和 agg_state：
+
 * SUM：求和，多行的 Value 进行累加。
+
 * REPLACE：替代，下一批数据中的 Value 会替换之前导入过的行中的 Value。
+
 * MAX：保留最大值。
+
 * MIN：保留最小值。
+
 * REPLACE_IF_NOT_NULL：非空值替换。和 REPLACE 的区别在于对于 null 值，不做替换。
+
 * HLL_UNION：HLL 类型的列的聚合方式，通过 HyperLogLog 算法聚合。
+
 * BITMAP_UNION：BIMTAP 类型的列的聚合方式，进行位图的并集聚合。
 
-> 警告
-> 
-> 如果这几种聚合方式无法满足需求，则可以选择使用 agg_state 类型。
+!!! warning
+
+    如果这几种聚合方式无法满足需求，则可以选择使用 agg_state 类型。
 
 假设有以下导入数据（原始数据）：
 
@@ -115,14 +117,19 @@ insert into example_tbl_agg1 values
 | 10004 | 2017/10/3 | 深圳 | 35 | 0 | 2017/10/3 10:20 | 11 | 6 | 6 |
 
 可以看到，用户 10000 只剩下了一行聚合后的数据。而其余用户的数据和原始数据保持一致。对于用户 10000 聚合后的数据，前 5 列没有变化：
+
 * 第 6 列值为 2017-10-01 07:00:00。因为 last_visit_date 列的聚合方式为 REPLACE，所以 2017-10-01 07:00:00 替换了 2017-10-01 06:00:00 保存了下来。注意：在同一个导入批次中的数据，对于 REPLACE 这种聚合方式，替换顺序不做保证，如在这个例子中，最终保存下来的，也有可能是 2017-10-01 06:00:00；而对于不同导入批次中的数据，可以保证，后一批次的数据会替换前一批次。
+
 * 第 7 列值为 35：因为 cost 列的聚合类型为 SUM，所以由 20 + 15 累加获得 35。
+
 * 第 8 列值为 10：因为 max_dwell_time 列的聚合类型为 MAX，所以 10 和 2 取最大值，获得 10。
+
 * 第 9 列值为 2：因为 min_dwell_time 列的聚合类型为 MIN，所以 10 和 2 取最小值，获得 2。
 
 经过聚合，Doris 中最终只会存储聚合后的数据。换句话说，即明细数据会丢失，用户不能够再查询到聚合前的明细数据了。
 
-## 导入数据与已有数据聚合
+## 2 导入数据与已有数据聚合
+
 假设现在表中已经拥有了前面导入的数据：
 
 | user_id | date | city | age | sex | last_visit_date | cost | max_dwell_time | min_dwell_time |
@@ -140,6 +147,7 @@ insert into example_tbl_agg1 values
 | -- | -- | -- | -- | -- | -- | -- | -- | -- |
 | 10004 | 2017/10/3 | 深圳 | 35 | 0 | 2017/10/3 11:22 | 44 | 19 | 19 |
 | 10005 | 2017/10/3 | 长沙 | 29 | 1 | 2017/10/3 18:11 | 3 | 1 | 1 |
+
 通过 SQL 导入数据：
 
 ```sql
@@ -163,13 +171,17 @@ insert into example_tbl_agg1 values
 可以看到，用户 10004 的已有数据和新导入的数据发生了聚合。同时新增了 10005 用户的数据。
 
 数据的聚合，在 Doris 中有如下三个阶段发生：
+
 1. 每一批次数据导入的 ETL 阶段。该阶段会在每一批次导入的数据内部进行聚合。
+
 2. 底层 BE 进行数据 Compaction 的阶段。该阶段，BE 会对已导入的不同批次的数据进行进一步的聚合。
+
 3. 数据查询阶段。在数据查询时，对于查询涉及到的数据，会进行对应的聚合。
 
 数据在不同时间，可能聚合的程度不一致。比如一批数据刚导入时，可能还未与之前已存在的数据进行聚合。但是对于用户而言，用户只能查询到聚合后的数据。即不同的聚合程度对于用户查询而言是透明的。用户需始终认为数据以最终的完成的聚合程度存在，而不应假设某些聚合还未发生。（可参阅聚合模型的局限性一节获得更多详情。）
 
-## agg_state
+## 3 agg_state
+
 AGG_STATE不能作为key列使用，建表时需要同时声明聚合函数的签名。
 用户不需要指定长度和默认值。实际存储的数据大小与函数实现有关。
 
