--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.2 使用 LDB Toolchain 编译（推荐）.md
@@ -2,7 +2,8 @@
 
 本文档主要介绍如何使用 LDB Toolchain 编译 Doris。该方式目前作为 Docker 编译方式的补充，方便没有 Docker 环境的开发者和用户编译 Doris 源码。Doris 目前推荐的 LDB Toolchain 版本为 0.17, 其中含有 clang-16 和 gcc-11。
 
-!!! tip 提示
+!!! tip
+
     LDB Toolchain 全称 Linux Distribution Based Toolchain Generator，它有助于在几乎所有 Linux 发行版上编译现代 C++ 项目。
 
 感谢 Amos Bird 的贡献。
@@ -14,7 +15,8 @@
 1. 下载 `ldb_toolchain_gen.sh`
     可以从这里下载最新的 `ldb_toolchain_gen.sh` 。该脚本用于生成 LDB Toolchain
 
-    !!! tip 提示
+    !!! tip
+
         更多信息，可访问 [https://github.com/amosbird/ldb_toolchain_gen](https://github.com/amosbird/ldb_toolchain_gen)
 
 2. 执行以下命令生成 ldb toolchain
@@ -84,7 +86,8 @@
 
 ## 2 编译 Doris
 
-!!! tip 提示
+!!! tip
+
     Doris 源码编译时首先会下载三方库进行编译，可以参考下文下载预编译版本的三方库，省去三方库编译
 
 1. 进入 Doris 源码目录，执行如下命令查看编译机器是否支持 AVX2 指令集
