--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.2 Docker 部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.2 Docker 部署.md
@@ -2,7 +2,8 @@
 
 该文档主要介绍了如何通过 Dockerfile 来制作 Apache Doris 的运行镜像，以便于在容器化编排工具或者快速测试过程中可迅速拉取一个 Apache Doris Image 来完成集群的创建和运行。
 
-!!! tip 提示
+!!! tip
+
     目前还不支持存算分离模式编译部署
 
 ## 1 软硬件要求
@@ -215,7 +216,7 @@ Doris Docker 适用的网络模式有两种。
 
 注意，以上接口必须填写信息，否则进程无法启动。
 
-!!! tip 提示
+!!! tip
 
     * FE_SERVERS 接口规则为：`FE_NAME:FE_HOST:FE_EDIT_LOG_PORT[,FE_NAME:FE_HOST:FE_EDIT_LOG_PORT]`
     
@@ -257,7 +258,8 @@ Doris Docker 适用的网络模式有两种。
     apache/doris:2.0.3-be-x86_64
     ```
 
-    !!! tip 提示
+    !!! tip
+
         3 FE & 3 BE Run 命令模板如有需要点击此处访问下载。
 
 2. Docker Compose 脚本
@@ -292,7 +294,8 @@ Doris Docker 适用的网络模式有两种。
         network_mode: host
     ```
 
-    !!! tip 提示
+    !!! tip
+
         3 FE & 3 BE Docker Compose 脚本模板如有需要点击此处访问下载。
 
 ### 3.3 部署 Doris Docker
