--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.1 快速部署.md
@@ -53,7 +53,8 @@
     test-disaggregated-cluster   green           Ready     2         2                  2
     ```
 
-!!! tip 提示
+!!! tip
+
     MS 服务需要使用 FDB 作为后端元数据存储，部署 MS 服务必须部署 FDB 服务，请按照部署 FDB 文档提前部署。
 
 ## 3 创建远程存储后端
