--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.5 配置部署计算组.md
@@ -18,7 +18,8 @@ spec:
 
 `{beImage}` 为部署 BE 服务的 image 。
 
-!!! tip 提示
+!!! tip
+
     cg1 为计算组的名称，执行 sql 的过程中可通过计算组名称选定想要使用的计算组。
 
 ## 2 配置多计算组
@@ -42,7 +43,8 @@ spec:
 
 修改如下配置到需要部署存算分离 `DorisDisaggregatedCluster` 资源中，可部署 2 套计算组，一套可部署 3 个 包含 BE 服务的 pod ， 一套可部署 2 个包含 BE 服务的 pod 。 `{beImage}` 指定想要使用的 BE 服务的 image 。
 
-!!! tip 提示
+!!! tip
+
     多套计算组使用的 image 尽量保持一致。
 
 ## 3 配置服务计算资源
@@ -134,7 +136,7 @@ spec:
 
 BE 服务默认 Cache 配置为 `file_cache_path = [{"path":"/opt/apache-doris/be/file_cache","total_size":107374182400,"query_limit":107374182400}]` 存储容量总可使用容量为 100Gi ，查询可使用的最大容量为 100Gi 。K8s 部署模式下，Doris-Operator 会为每个路径挂载定制的持久化存储。如果需要指定多个路径挂载多盘作为数据缓存，请参考定制化配置文件。
 
-!!! tip 提示
+!!! tip
 
     * file_cache_path 的值必须是一个 JSON 数组。
     
