--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.1 使用 Docker 开发镜像编译（推荐）.md
@@ -2,7 +2,8 @@
 
 本文介绍如何使用 Doris 官方提供的编译镜像来编译 Doris，由于此镜像由官方维护，且会随编译依赖及时更新，所以推荐用户使用这种方式编译
 
-!!! tip 提示
+!!! tip
+
     目前还不支持存算分离模式编译部署
 
 ## 1 安装 Docker
@@ -113,7 +114,8 @@ $ USE_AVX2=0 sh build.sh
 $ BUILD_TYPE=Debug sh build.sh
 ```
 
-!!! tip 提示
+!!! tip
+
     如何查看机器是否支持 AVX2？
     ```shell
     $ cat /proc/cpuinfo | grep avx2
