--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.1 源码编译/1.1.5 Windows 平台上编译.md
@@ -2,7 +2,8 @@
 
 本文介绍如何在 Windows 平台上编译源码，借助 Windows 的 WSL 功能，可以通过在 Windows 上启动 Linux 系统来编译 Doris。
 
-!!! tip 提示
+!!! tip
+
     目前还不支持存算分离模式编译部署
 
 ## 1 环境要求
