--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.4 配置部署 FE.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/1 安装部署/1.2 集群部署/1.2.3 K8s 部署/1.2.3.3 Compute storage decoupled/1.2.3.3.4 配置部署 FE.md
@@ -97,7 +97,7 @@ spec:
 
 按上述模式配置好 FE 服务需要使用的 ConfigMap 信息，将配置更新到需要部署的存算分离资源中。
 
-!!! tip 提示
+!!! tip
   
     * K8s 部署中，使用 ConfigMap 挂载定制化配置文件时，无需添加 `meta_service_endpoint` 、 `deploy_mode` 以及 `cluster_id` 配置，Doris-Operator 相关服务会自动添加。
     
